[package]
name = "png"
version = "0.17.9"
license = "MIT OR Apache-2.0"

description = "PNG decoding and encoding library in pure Rust"
categories = ["multimedia::images"]
authors = ["The image-rs Developers"]
repository = "https://github.com/image-rs/image-png.git"

edition = "2018"
rust-version = "1.57"
include = [
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/README.md",
    "/CHANGES.md",
    "/src/",
    "/examples/",
    "/benches/",
]

[dependencies]
bitflags = "1.0"
crc32fast = "1.2.0"
fdeflate = "0.3.0"
flate2 = "1.0"
miniz_oxide = { version = "0.7.1", features = ["simd"] }

[dev-dependencies]
clap = { version = "3.0", features = ["derive"] }
criterion = "0.3.1"
getopts = "0.2.14"
glium = { version = "0.32", features = ["glutin"], default-features = false }
glob = "0.3"
rand = "0.8.4"
term = "0.7"

[features]
unstable = []
benchmarks = []

[[bench]]
path = "benches/decoder.rs"
name = "decoder"
harness = false
