[package]
name = "image-fuzz-afl"
version = "0.0.1"
authors = ["HeroicKatora"]
publish = false

[dependencies.image]
path = ".."

[dependencies.afl]
version = "0.4.3"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_pnm"
path = "fuzzers/fuzz_pnm.rs"

[[bin]]
name = "fuzz_webp"
path = "fuzzers/fuzz_webp.rs"
