[package]
name = "image-fuzz-afl"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies.image]
path = ".."

[dependencies.afl]
version = "0.12.8"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_pnm"
path = "fuzzers/fuzz_pnm.rs"

[[bin]]
name = "reproduce_pnm"
path = "reproducers/reproduce_pnm.rs"

[[bin]]
name = "fuzz_webp"
path = "fuzzers/fuzz_webp.rs"

[[bin]]
name = "reproduce_webp"
path = "reproducers/reproduce_webp.rs"
