[package]
name = "png-afl"
version = "0.1.0"
authors = ["nwin <nwin@users.noreply.github.com>"]

[dependencies.png]
version = "*"
path = "../"

[dependencies.afl-coverage-plugin]
git = "https://github.com/kmcallister/afl.rs"

[dependencies.afl-coverage]
git = "https://github.com/kmcallister/afl.rs"
